// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/Flex renders a Flex 1`] = `
<div>
  <div
    class="css-kruywr"
  >
    Flex
  </div>
</div>
`;

exports[`components/Flex renders a Flex with props 1`] = `
<div>
  <div
    class="css-xyw5i4"
  >
    FlexWithProps
  </div>
</div>
`;
